Update index.html structure and content

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
        
         // Se pueden añadir cientos más siguiendo este formato...
         // Objetos
-        {es:"Silla", en:"Chair", cat:"objetos", diff:"kids"},
+        /*{es:"Silla", en:"Chair", cat:"objetos", diff:"kids"},
         {es:"Mesa", en:"Table", cat:"objetos", diff:"kids"},
         {es:"Cama", en:"Bed", cat:"objetos", diff:"kids"},
         {es:"Puerta", en:"Door", cat:"objetos", diff:"kids"},
@@ -223,6 +223,56 @@
         {es:"Escritorio", en:"Desk", cat:"objetos", diff:"kids"},
         {es:"Cama", en:"Bed", cat:"objetos", diff:"kids"},
         {es:"Juguete", en:"Toy", cat:"objetos", diff:"kids"},
+        {es:"Periscopio", en:"Periscope", cat:"objetos", diff:"hard"},*/
+{es:"Dron", en:"Drone", cat:"objetos", diff:"hard"},
+{es:"Tocadiscos", en:"Record player", cat:"objetos", diff:"hard"},
+{es:"Búmeran", en:"Boomerang", cat:"objetos", diff:"hard"},
+{es:"Sextante", en:"Sextant", cat:"objetos", diff:"master"},
+{es:"Caleidoscopio", en:"Kaleidoscope", cat:"objetos", diff:"master"},
+{es:"Desfibrilador", en:"Defibrillator", cat:"objetos", diff:"expert"},
+{es:"Claqueta", en:"Clapperboard", cat:"objetos", diff:"hard"},
+{es:"Diapasón", en:"Tuning fork", cat:"objetos", diff:"master"},
+{es:"Espectrómetro", en:"Spectrometer", cat:"objetos", diff:"master"},
+{es:"Estetoscopio", en:"Stethoscope", cat:"objetos", diff:"expert"},
+{es:"Ábaco", en:"Abacus", cat:"objetos", diff:"hard"},
+{es:"Gramófono", en:"Gramophone", cat:"objetos", diff:"hard"},
+{es:"Incienso", en:"Incense", cat:"objetos", diff:"expert"},
+{es:"Molinillo de café", en:"Coffee grinder", cat:"objetos", diff:"hard"},
+{es:"Narguile", en:"Hookah", cat:"objetos", diff:"expert"},
+{es:"Pendrive", en:"Flash drive", cat:"objetos", diff:"hard"},
+{es:"Podómetro", en:"Pedometer", cat:"objetos", diff:"expert"},
+{es:"Proyector", en:"Projector", cat:"objetos", diff:"hard"},
+{es:"Raqueta de nieve", en:"Snowshoe", cat:"objetos", diff:"expert"},
+{es:"Soplete", en:"Blowtorch", cat:"objetos", diff:"hard"},
+{es:"Telescopio", en:"Telescope", cat:"objetos", diff:"hard"},
+{es:"Termostato", en:"Thermostat", cat:"objetos", diff:"expert"},
+{es:"Trampolín", en:"Trampoline", cat:"objetos", diff:"hard"},
+{es:"Xilófono", en:"Xylophone", cat:"objetos", diff:"hard"},
+{es:"Zancos", en:"Stilts", cat:"objetos", diff:"expert"},
+{es:"Aspiradora", en:"Vacuum cleaner", cat:"objetos", diff:"hard"},
+{es:"Barómetro", en:"Barometer", cat:"objetos", diff:"master"},
+{es:"Brújula", en:"Compass", cat:"objetos", diff:"hard"},
+{es:"Cabrestante", en:"Winch", cat:"objetos", diff:"master"},
+{es:"Catalejo", en:"Spyglass", cat:"objetos", diff:"hard"},
+{es:"Cizalla", en:"Shears", cat:"objetos", diff:"expert"},
+{es:"Cronómetro", en:"Stopwatch", cat:"objetos", diff:"hard"},
+{es:"Dentífrico", en:"Toothpaste", cat:"objetos", diff:"hard"},
+{es:"Escáner", en:"Scanner", cat:"objetos", diff:"hard"},
+{es:"Esmeril", en:"Grinder", cat:"objetos", diff:"expert"},
+{es:"Extintor", en:"Fire extinguisher", cat:"objetos", diff:"hard"},
+{es:"Fotocopiadora", en:"Photocopier", cat:"objetos", diff:"expert"},
+{es:"Grapadora", en:"Stapler", cat:"objetos", diff:"hard"},
+{es:"Hidrante", en:"Fire hydrant", cat:"objetos", diff:"hard"},
+{es:"Imán", en:"Magnet", cat:"objetos", diff:"expert"},
+{es:"Jeringuilla", en:"Syringe", cat:"objetos", diff:"hard"},
+{es:"Lupa", en:"Magnifying glass", cat:"objetos", diff:"hard"},
+{es:"Marcapáginas", en:"Bookmark", cat:"objetos", diff:"expert"},
+{es:"Metrónomo", en:"Metronome", cat:"objetos", diff:"master"},
+{es:"Microscopio", en:"Microscope", cat:"objetos", diff:"hard"},
+{es:"Nivel de burbuja", en:"Spirit level", cat:"objetos", diff:"master"},
+{es:"Parquímetro", en:"Parking meter", cat:"objetos", diff:"expert"},
+{es:"Sismógrafo", en:"Seismograph", cat:"objetos", diff:"master"},
+{es:"Yunque", en:"Anvil", cat:"objetos", diff:"expert"},
 
         //Comidas
         {es:"Manzana", en:"Apple", cat:"comida", diff:"kids"},
